# bare-storage

./: .gitignore  CMakeLists.txt  README.md  binding.c  binding.mm  index.js  package.json  test.js
.github/workflows/: prebuild.yml  test.yml
lib/: android.js  apple.js  linux.js  win32.js
lib/runtime/: bare.js  node.js
